[package]
name = "telemetrio"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["rt"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
derive_builder = "0.20.0"
snafu = "0.8.4"